main body of project

--- a/index.html
+++ b/index.html
@@ -1,187 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>hyper-drive</title>
-        <link rel="stylesheet" href="bootstrap.min.css">
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-            crossorigin="anonymous">
-  </head>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>hyper-drive</title>
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
+</head>
+
 <body>
-<!--<nav class="navbar nav">
-        <div id="menu">
-                <ul class="nav nav-pills nav-stacked">
-        <img src="_Large_Moment.jpg" class="logo-image image-responsive" id="gradient" alt="logo">
-            <li><a href="#slide" class="nav-link text-dark active font-weight-bold"><i class="fa fa-fw fa-home "></i>Home</a></li>
-            <li><a href="#contact" class="nav-link text-dark font-weight-bold"><i class="fa fa-fw fa-envelope"></i>Contact</a></li>
-            <h1 id="logo_text">Trust,<span>Empower People, Invest in Learning.</span></h1>
-        </ul>  
-    </div>
-</nav>
-<header>
-        <div class="container-fluid m-2">
-            <div class="col-sm-8 logo">
-                <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fvelohouse.se%2Fvideos%2F778602492344393%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" 
-                scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>	
-                <p>Mårkescyklar Hbg-Visit us. Our workshop is open every monday at 16:00-20:00</p>
-            </div>
-            <div class="col-sm-4 velohouse">
-                <img src="velohouse1.jpg" class="velo" alt="velohouse">
-                <img src="velohouse2.jpg" class="velo1" alt="velohouse">
-            </div>
-        </div>
-    </div>
-</header>-->
-<main>
-    <div class="container">
-        <h1>About Our Organization</h1>
-        <div class="row">
-        <div class="col-sm-6 m-2 p-2 bg-info">
-            <h2>VeloHouse</h2>
-            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fvelohouse.se%2Fvideos%2F778602492344393%2F&show_text=0&width=560" width="300" height="300" style="border:2px solid;overflow:hidden;" 
-            scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>	
-            <p><b>Mårkescyklar Hbg</b>-Visit us. Our workshop is open every monday at 16:00-20:00</p>
-        </div>
-        <div class="col-sm-6 m-2 p-2 bg-info">
-            <p><b>VeloHouse</b> is an open co-operative styled workshop space in Helsingborg,Sweden for people interested in bicycles or creative mobility projects.
-                Management Team-<strong>David J. Hare, Thomas, Tam Thi.</strong> 
-            </p>
-        </div>
-        </div>
-    </div>
-        <div class="col-xs-1 pre_next_wap" id="next_testimonial">
-            <a href="#"><span class="glyphicon glyphicon-chevron-right pre_next"></span></a>
-        </div>
-        <div class="clearfix testimonial_top_bottom_spacer"></div>
-    </div>
-</div>
-<div id="templatemo_events" class="container_wapper">
-    <div class="container-fluid">
-        <h1>Events</h1>
-        <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-0">
-            <div class="event_box_wap event_animate_left">
-                <div class="event_box_img">
-                    <img src="images/templatemo_event_01.jpg" class="img-responsive" alt="Web Design Trends" />
-                </div>
-                <div class="event_box_caption">
-                    <h1>Web Design Trends</h1>
-                    <p><span class="glyphicon glyphicon-map-marker"></span> New Hotel, Bangkok, Thailand &nbsp;&nbsp; <span class="glyphicon glyphicon-time"></span> 4:00 PM to 8:00 PM</p>
-                    <p>Quisque feugiat dapibus lectus ut consectetur. Donec et ante vitae leo cursus hendrerit vitae ac mauris. Suspendisse dictum pretium urna quis rutrum. Nullam tincidunt dolor ut leo malesuada, eget volutpat turpis porttitor.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-0">
-            <div class="event_box_wap event_animate_right">
-                <div class="event_box_img">
-                    <img src="images/templatemo_event_02.jpg" class="img-responsive" alt="Free Bootstrap Seminar" />
-                </div>
-                <div class="event_box_caption">
-                    <h1>Free Bootstrap Seminar</h1>
-                    <p><span class="glyphicon glyphicon-map-marker"></span> Digital Hall, Yangon, Myanmar &nbsp;&nbsp; <span class="glyphicon glyphicon-time"></span> 10:30 AM to 3:30 PM </p>
-                    <p>Vestibulum dapibus dolor porttitor urna pretium euismod. Aliquam lobortis enim at lacinia mollis. Curabitur eget sem eros. Duis pulvinar rhoncus lectus, ac hendrerit enim pharetra et.</p>
-                </div>
-            </div>
-        </div>
-        <div class="clearfix"></div>
-        <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-0">
-            <div class="event_box_wap event_animate_left">
-                <div class="event_box_img">
-                    <img src="images/templatemo_event_03.jpg" class="img-responsive" alt="" />
-                </div>
-                <div class="event_box_caption">
-                    <h1>Mobile Designs</h1>
-                    <p><span class="glyphicon glyphicon-map-marker"></span> Old Town Center, Mandalay, Myanmar &nbsp;&nbsp; <span class="glyphicon glyphicon-time"></span> 3:30 PM to 6:30 PM </p>
-                    <p>Etiam ac ante gravida, pellentesque odio non, facilisis dui. Suspendisse vestibulum justo quis sapien sodales, in pellentesque erat congue.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-0">
-            <div class="event_box_wap event_animate_right">
-                <div class="event_box_img">
-                    <img src="images/templatemo_event_04.jpg" class="img-responsive" alt="" />
-                </div>
-                <div class="event_box_caption">
-                    <h1>Happy Startups</h1>
-                    <p><span class="glyphicon glyphicon-map-marker"></span> New Hat, Lashio, Myanmar &nbsp;&nbsp; <span class="glyphicon glyphicon-time"></span> 2:15 PM to 5:15 PM </p>
-                    <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc rutrum urna eget augue placerat sodales. Mauris ut dapibus nisi, eget fringilla lectus.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</main>
-<div id="contact" class="container_wapper">
-    <div class="container-fluid">
-        <h1>Contact</h1>
-        <div class="col-xs-12">
-            <div id="contact_map"></div>
-        </div>
-        <div class="col-md-4">
-            <h2>Contact Info.</h2>
-            <p>mkkbj</p>
-            <br>
-            <p><strong>Email:</strong> info@company.com<br /><strong>Phone:</strong> 010-020-0340<br /><strong>Website:</strong> www.company.com<br /><strong>Address:</strong> 1234vhkjbjn</p>
-            <ul class="list-inline social-link">
-                <li>
-                    <a href="#"><i class="fa fa-linkedin"></i></a> 
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-twitter"></i></a> 
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-facebook"></i></a> 
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-youtube"></i></a> 
-                </li>
-                <li>
-                    <a href="#"><i class="fa fa-github"></i></a> 
-                </li>
-           </ul>
-        </div>
-        <form action="#" method="post" class="col-md-8">
+    <main>
+        <div class="container">
+            <h1>About Our Organization</h1><!--Heading of main content-->
             <div class="row">
-                <div class="col-md-12">
-                <h2>Send Enquiry</h2>
+                <h2>VeloHouse</h2><!--Velohouse description-->
+                <div class="col-sm-6 column velo clearfix">
+                    <div class="card-sm-body">
+                        <img src="images/image8.jpg" alt="velo-house-images" class="image-size">
+                    </div>
                 </div>
-                <div class="col-md-6">
-                    <p>Name</p>
-                    <input type="text" name="name" id="name" placeholder="Your Name" />
-                </div>
-                <div class="col-md-6">
-                    <p>Email</p>
-                    <input type="text" name="email" id="email" placeholder="Your Email" />
-                </div>
-                <div class="col-md-12">
-                    <p>Subject</p>
-                    <input type="text" name="subject" id="subject" placeholder="Subject" />
-                </div>
-                <div class="col-md-12">
-                    <p>Message</p>
-                    <textarea name="message" id="message"  placeholder="Write your message here..."></textarea>
-                </div>
-                <div class="col-xs-6 col-sm-3 col-md-offset-6">
-                    <button type="submit">Send</button>
-                </div>
-                <div class="col-xs-6 col-sm-3">
-                    <button type="reset">Reset</button>
+                <div class="col-sm-6 column1 velo1 clearfix">
+                    <div class="card-sm-text">
+                        <p><b>VeloHouse:</b> It is an open co-operative styled workshop space in Helsingborg,Sweden for people interested in bicycles or creative mobility projects.</p>
+                        <p> Management Team-<strong><mark>David J. Hare, Thomas Pytel , Tam Thi Le Cao..</mark></strong></p>
+                        <p>Mårkescyklar Hbg--Visit us.Our workshop is open every monday at 16:00-20:00</p>
+                        <p>Find us on:
+                            <a href="https://www.facebook.com/velohouse.se/">Facebook:
+                                <img src="images/f.jpg" alt="logo image9" width="20" height="20">
+                            </a>
+                            <a href="https://www.instagram.com/velohouse.se/">Instagram
+                                <img src="images/ins.jpg" alt="logo image10" width="20" height="20">
+                            </a>
+                            <a href="www.velohouse.se" style="color: black;">
+                                <abbr title="click here">Website</abbr>
+                            </a></p>
+                    </div>
                 </div>
             </div>
-        </form>
-    </div>
-</div>
-<div id="footer">
-    <div>
-        <p id="footer">Copyright &copy;  Company Name</p>
-    </div>
-</div>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
-<script src="app.js"></script>
+        </div>
+        <div class="container">
+            <div class="row emc-row">
+                <h2><img src="images/emclogo.png" alt="logo image9" width="100" height="30">EMC (Electrified Music Community).</h2><!--EMC (Electrified Music Community) description-->
+                <div class="col-sm-6 column1 emc1">
+                    <div class="card-sm-text">
+                        <p><b>EMC (Electrified Music Community):</b>It is a group that focuses on promoting electronic music.EMC is a premier event management expert for Music Festival, DJ workshop, and artist booking..
+                        <p> Management Team-<strong><mark>David J. Hare, Jesper Rydberg.</mark></strong></p>
+                        <p>Find us on:
+                                <a href="https://www.facebook.com/EMChelsingborg/">Facebook:
+                                    <img src="images/f.jpg" alt="logo image9" width="20" height="20">
+                                </a>
+                                <a href="https://www.instagram.com/emchelsingborg/">Instagram:
+                                    <img src="images/ins.jpg" alt="logo image10" width="20" height="20">
+                                </a></p>
+                    </div>
+                    <div class="card-sm-text">
+                        <h2>Hyper Café</h2><!--Hyper Café description-->
+                        <p><b>Hyperspace Café:</b>It is a platform for Live Stream Music Concerts/Events to the international audience.</p>
+                        <p> Management Team-<strong><mark> David J. Hare, Paul Barker.</mark></strong></p>
+                        <p>Find us on:
+                            <a href="https://www.facebook.com/hyperspacecafe/">Facebook:
+                                <img src="images/f.jpg" alt="logo image9" width="20" height="20">
+                            </a>
+                            <a href="https://www.facebook.com/groups/hyperspacecafe/">Facebook-Group:
+                                <img src="images/f.jpg" alt="logo image10" width="20" height="20">
+                            </a></p>
+                    </div>
+                </div>
+                <div class="col-sm-6 column emc">
+                    <img src="images/emc.jpg" alt="emc-images" class="image-size">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row fimi-row"><!--Ta Sats:IDEEL Forening description-->
+                <h2>Fimi & Ta Sats</h2>
+                <div class="col-sm-6 column fimi">
+                    <div class="card-sm-text ta-sats">
+                        <h2>Ta Sats:IDEEL Forening</h2>
+                        <p><b>Ta Sats:</b> Club är till för alla ungdomar i regionen under 25 år. Syftet är att hjälpa nyanlända ungdomar
+                            under 25 år att knyta kontakter med sitt nya hemland och hjälpa till att skapa förutsättningar
+                            för att kunna etablera sig och klara sig på egen hand.</p>
+                        <p>Find us on:
+                            <a href="https://www.facebook.com/groups/1796615523954067">Facebook:
+                                <img src="images/f.jpg" alt="logo image9" width="20" height="20">
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-sm-6 column1 fimi1"><!--Fimi & Ta Sats description-->
+                    <div class="card-sm-text">
+                        <p>
+                            <b>Fimi & Ta Sats:</b>Its in collaboration with
+                            <mark>Velohouse </mark>contribute towards integration projects in Sweden. Our idea is to collaborate
+                            with new arrivals from different parts of the world into Swedish society by means of early-stage
+                            interventions and focusing on the individual. On Örestrand outside Höganäs we have done several
+                            projects for HVB home which leads to Personal Empowerment, Enhancing Personal & Professional
+                            knowledge and Networking including open house workshops, Swedish language learning and promoting
+                            Swedish handicrafts.</p>
+                        <p> Management Team-<strong><mark>David J. Hare, Jesper Rydberg.</mark></strong></p>
+                        <p>Find us on:
+                            <a href="https://www.facebook.com/FIMI-Innovation-410836672674781/">Facebook:
+                                <img src="images/f.jpg" alt="logo image9" width="20" height="20">
+                            </a>
+                            <a href=" http://fimi.se/" style="color: black;">
+                                <abbr title="click here">Website</abbr>
+                            </a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+    <script src="js/app.js"></script>
 </body>
+
 </html>
-
-
-
