again some changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>hyper-drive</title>
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
@@ -16,18 +16,26 @@
 <body>
     <main>
         <div class="container">
-            <h1>About Our Organization</h1><!--Heading of main content-->
+            <h1>About Our Organization</h1>
+            <!--Heading of main content-->
             <div class="row">
-                <h2>VeloHouse</h2><!--Velohouse description-->
-                <div class="col-sm-6 column velo clearfix">
-                    <div class="card-sm-body">
-                        <img src="images/image8.jpg" alt="velo-house-images" class="image-size">
+                <h2 id="velotext">VeloHouse</h2>
+                <!--Velohouse description-->
+                <div class="col-sm-6 column clearfix">
+                    <div class="card-sm-body velo">
+                        <img src="images/image8.jpg" alt="velo-house-images" class="image-size img-responsive">
                     </div>
                 </div>
-                <div class="col-sm-6 column1 velo1 clearfix">
-                    <div class="card-sm-text">
-                        <p><b>VeloHouse:</b> It is an open co-operative styled workshop space in Helsingborg,Sweden for people interested in bicycles or creative mobility projects.</p>
-                        <p> Management Team-<strong><mark>David J. Hare, Thomas Pytel , Tam Thi Le Cao..</mark></strong></p>
+                <div class="col-sm-6 column1 clearfix">
+                    <div class="card-sm-text velo1">
+                        <p>
+                            <b>VeloHouse:</b> It is an open co-operative styled workshop space in Helsingborg,Sweden for people
+                            interested in bicycles or creative mobility projects.</p>
+                        <p> Management Team-
+                            <strong>
+                                <mark>David J. Hare, Thomas Pytel , Tam Thi Le Cao..</mark>
+                            </strong>
+                        </p>
                         <p>Mårkescyklar Hbg--Visit us.Our workshop is open every monday at 16:00-20:00</p>
                         <p>Find us on:
                             <a href="https://www.facebook.com/velohouse.se/">Facebook:
@@ -38,52 +46,71 @@
                             </a>
                             <a href="www.velohouse.se" style="color: black;">
                                 <abbr title="click here">Website</abbr>
-                            </a></p>
+                            </a>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row emc-row">
-                <h2><img src="images/emclogo.png" alt="logo image9" width="100" height="30">EMC (Electrified Music Community).</h2><!--EMC (Electrified Music Community) description-->
-                <div class="col-sm-6 column1 emc1">
-                    <div class="card-sm-text">
-                        <p><b>EMC (Electrified Music Community):</b>It is a group that focuses on promoting electronic music.EMC is a premier event management expert for Music Festival, DJ workshop, and artist booking..
-                        <p> Management Team-<strong><mark>David J. Hare, Jesper Rydberg.</mark></strong></p>
-                        <p>Find us on:
+                <h2 class="emc-text">
+                    <img src="images/emclogo.png" alt="logo image9" width="100" height="30">(Electrified Music Community).</h2>
+                <!--EMC (Electrified Music Community) description-->
+                <div class="col-sm-6 column2">
+                    <div class="card-sm-text emc1">
+                        <p>
+                            <b>EMC (Electrified Music Community):</b>It is a group that focuses on promoting electronic music.EMC
+                            is a premier event management expert for Music Festival, DJ workshop, and artist booking..
+                            <p> Management Team-
+                                <strong>
+                                    <mark>David J. Hare, Jesper Rydberg.</mark>
+                                </strong>
+                            </p>
+                            <p>Find us on:
                                 <a href="https://www.facebook.com/EMChelsingborg/">Facebook:
                                     <img src="images/f.jpg" alt="logo image9" width="20" height="20">
                                 </a>
                                 <a href="https://www.instagram.com/emchelsingborg/">Instagram:
                                     <img src="images/ins.jpg" alt="logo image10" width="20" height="20">
-                                </a></p>
-                    </div>
-                    <div class="card-sm-text">
-                        <h2>Hyper Café</h2><!--Hyper Café description-->
-                        <p><b>Hyperspace Café:</b>It is a platform for Live Stream Music Concerts/Events to the international audience.</p>
-                        <p> Management Team-<strong><mark> David J. Hare, Paul Barker.</mark></strong></p>
+                                </a>
+                            </p><hr>
+                        <h2 class="hypercafe-text">Hyper Café</h2><!--Hyper Café description-->
+                        <p>
+                            <b>Hyperspace Café:</b>It is a platform for Live Stream Music Concerts/Events to the international
+                            audience.</p>
+                        <p> Management Team-
+                            <strong>
+                                <mark> David J. Hare, Paul Barker.</mark>
+                            </strong>
+                        </p>
                         <p>Find us on:
                             <a href="https://www.facebook.com/hyperspacecafe/">Facebook:
                                 <img src="images/f.jpg" alt="logo image9" width="20" height="20">
                             </a>
                             <a href="https://www.facebook.com/groups/hyperspacecafe/">Facebook-Group:
                                 <img src="images/f.jpg" alt="logo image10" width="20" height="20">
-                            </a></p>
+                            </a>
+                        </p>
                     </div>
                 </div>
-                <div class="col-sm-6 column emc">
-                    <img src="images/emc.jpg" alt="emc-images" class="image-size">
+                <div class="col-sm-6 column3">
+                        <div class="card-sm-body emc ">
+                    <img src="images/emc.jpg" alt="emc-images" class="image-size img-responsive">
+                </div>
                 </div>
             </div>
         </div>
         <div class="container">
-            <div class="row fimi-row"><!--Ta Sats:IDEEL Forening description-->
+            <div class="row fimi-row">
+                <!--Ta Sats:IDEEL Forening description-->
                 <h2>Fimi & Ta Sats</h2>
-                <div class="col-sm-6 column fimi">
-                    <div class="card-sm-text ta-sats">
-                        <h2>Ta Sats:IDEEL Forening</h2>
-                        <p><b>Ta Sats:</b> Club är till för alla ungdomar i regionen under 25 år. Syftet är att hjälpa nyanlända ungdomar
-                            under 25 år att knyta kontakter med sitt nya hemland och hjälpa till att skapa förutsättningar
+                <h2 class="ta-sats-text">Ta Sats:IDEEL Forening</h2>
+                <div class="col-sm-6 fimi">
+                    <div class="card-sm-text">
+                        <p>
+                            <b>Ta Sats:</b> Club är till för alla ungdomar i regionen under 25 år. Syftet är att hjälpa nyanlända
+                            ungdomar under 25 år att knyta kontakter med sitt nya hemland och hjälpa till att skapa förutsättningar
                             för att kunna etablera sig och klara sig på egen hand.</p>
                         <p>Find us on:
                             <a href="https://www.facebook.com/groups/1796615523954067">Facebook:
@@ -92,8 +119,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-sm-6 column1 fimi1"><!--Fimi & Ta Sats description-->
-                    <div class="card-sm-text">
+                <div class="col-sm-6 column4">
+                    <!--Fimi & Ta Sats description-->
+                    <div class="card-sm-text fimi-text">
                         <p>
                             <b>Fimi & Ta Sats:</b>Its in collaboration with
                             <mark>Velohouse </mark>contribute towards integration projects in Sweden. Our idea is to collaborate
@@ -102,14 +130,19 @@
                             projects for HVB home which leads to Personal Empowerment, Enhancing Personal & Professional
                             knowledge and Networking including open house workshops, Swedish language learning and promoting
                             Swedish handicrafts.</p>
-                        <p> Management Team-<strong><mark>David J. Hare, Jesper Rydberg.</mark></strong></p>
+                        <p> Management Team-
+                            <strong>
+                                <mark>David J. Hare, Jesper Rydberg.</mark>
+                            </strong>
+                        </p>
                         <p>Find us on:
                             <a href="https://www.facebook.com/FIMI-Innovation-410836672674781/">Facebook:
                                 <img src="images/f.jpg" alt="logo image9" width="20" height="20">
                             </a>
                             <a href=" http://fimi.se/" style="color: black;">
                                 <abbr title="click here">Website</abbr>
-                            </a></p>
+                            </a>
+                        </p>
                     </div>
                 </div>
             </div>
