--- a/index.html
+++ b/index.html
@@ -74,30 +74,33 @@
                                 <a href="https://www.instagram.com/emchelsingborg/">Instagram:
                                     <img src="images/ins.jpg" alt="logo image10" width="20" height="20">
                                 </a>
-                            </p><hr>
-                        <h2 class="hypercafe-text">Hyper Café</h2><!--Hyper Café description-->
-                        <p>
-                            <b>Hyperspace Café:</b>It is a platform for Live Stream Music Concerts/Events to the international
-                            audience.</p>
-                        <p> Management Team-
-                            <strong>
-                                <mark> David J. Hare, Paul Barker.</mark>
-                            </strong>
-                        </p>
-                        <p>Find us on:
-                            <a href="https://www.facebook.com/hyperspacecafe/">Facebook:
-                                <img src="images/f.jpg" alt="logo image9" width="20" height="20">
-                            </a>
-                            <a href="https://www.facebook.com/groups/hyperspacecafe/">Facebook-Group:
-                                <img src="images/f.jpg" alt="logo image10" width="20" height="20">
-                            </a>
-                        </p>
+                            </p>
+                            <hr>
+                            <h2 class="hypercafe-text">Hyper Café</h2>
+                            <!--Hyper Café description-->
+                            <p>
+                                <b>Hyperspace Café:</b>It is a platform for Live Stream Music Concerts/Events to the international
+                                audience.
+                            </p>
+                            <p> Management Team-
+                                <strong>
+                                    <mark> David J. Hare, Paul Barker.</mark>
+                                </strong>
+                            </p>
+                            <p>Find us on:
+                                <a href="https://www.facebook.com/hyperspacecafe/">Facebook:
+                                    <img src="images/f.jpg" alt="logo image9" width="20" height="20">
+                                </a>
+                                <a href="https://www.facebook.com/groups/hyperspacecafe/">Facebook-Group:
+                                    <img src="images/f.jpg" alt="logo image10" width="20" height="20">
+                                </a>
+                            </p>
                     </div>
                 </div>
                 <div class="col-sm-6 column3">
-                        <div class="card-sm-body emc ">
-                    <img src="images/emc.jpg" alt="emc-images" class="image-size img-responsive">
-                </div>
+                    <div class="card-sm-body emc ">
+                        <img src="images/emc.jpg" alt="emc-images" class="image-size img-responsive">
+                    </div>
                 </div>
             </div>
         </div>
