--- a/index.html
+++ b/index.html
@@ -19,14 +19,18 @@
             <h1>About Our Organization</h1>
             <!--Heading of main content-->
             <div class="row">
-                <h2 id="velotext">VeloHouse</h2>
                 <!--Velohouse description-->
                 <div class="col-sm-6 column clearfix">
-                    <div class="card-sm-body velo">
-                        <img src="images/image8.jpg" alt="velo-house-images" class="image-size img-responsive">
+                    <div class="card m-0 p-o">
+                        <div class="card-header m-0 p-0">
+                            <h2 id="velotext">VeloHouse</h2>
+                            <div class="card-sm-body velo">
+                                <img src="images/image8.jpg" alt="velo-house-images" class="image-size img-responsive">
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-6 column1 clearfix">
+                <div class="col-sm-6 column1">
                     <div class="card-sm-text velo1">
                         <p>
                             <b>VeloHouse:</b> It is an open co-operative styled workshop space in Helsingborg,Sweden for people
@@ -54,8 +58,6 @@
         </div>
         <div class="container">
             <div class="row emc-row">
-                <h2 class="emc-text">
-                    <img src="images/emclogo.png" alt="logo image9" width="100" height="30">(Electrified Music Community).</h2>
                 <!--EMC (Electrified Music Community) description-->
                 <div class="col-sm-6 column2">
                     <div class="card-sm-text emc1">
@@ -98,8 +100,14 @@
                     </div>
                 </div>
                 <div class="col-sm-6 column3">
-                    <div class="card-sm-body emc ">
-                        <img src="images/emc.jpg" alt="emc-images" class="image-size img-responsive">
+                    <div class="card-sm-body emc">
+                        <div class="card m-0 p-o">
+                            <div class="card-header m-0 p-0">
+                                <h2 class="emc-text">
+                                    <img src="images/emclogo.png" alt="logo image9" width="80" height="30" ;>(Electrified Music Community).</h2>
+                                <img src="images/emc.jpg" alt="emc-images" class="image-size img-responsive">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -107,45 +115,53 @@
         <div class="container">
             <div class="row fimi-row">
                 <!--Ta Sats:IDEEL Forening description-->
-                <h2>Fimi & Ta Sats</h2>
-                <h2 class="ta-sats-text">Ta Sats:IDEEL Forening</h2>
-                <div class="col-sm-6 fimi">
-                    <div class="card-sm-text">
-                        <p>
-                            <b>Ta Sats:</b> Club är till för alla ungdomar i regionen under 25 år. Syftet är att hjälpa nyanlända
-                            ungdomar under 25 år att knyta kontakter med sitt nya hemland och hjälpa till att skapa förutsättningar
-                            för att kunna etablera sig och klara sig på egen hand.</p>
-                        <p>Find us on:
-                            <a href="https://www.facebook.com/groups/1796615523954067">Facebook:
-                                <img src="images/f.jpg" alt="logo image9" width="20" height="20">
-                            </a>
-                        </p>
+                <div class="col-sm-6 column4">
+                    <div class="card m-0 p-o">
+                        <div class="card-header m-0 p-0">
+                            <h2 class="ta-sats-text">Ta Sats:IDEEL Forening</h2>
+                            <div class="card-sm-text">
+                                <p>
+                                    <b>Ta Sats:</b> Club är till för alla ungdomar i regionen under 25 år. Syftet är att hjälpa
+                                    nyanlända ungdomar under 25 år att knyta kontakter med sitt nya hemland och hjälpa till
+                                    att skapa förutsättningar för att kunna etablera sig och klara sig på egen hand.</p>
+                                <p>Find us on:
+                                    <a href="https://www.facebook.com/groups/1796615523954067">Facebook:
+                                        <img src="images/f.jpg" alt="logo image9" width="20" height="20">
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="col-sm-6 column4">
+                <div class="col-sm-6 column5 clearfix">
                     <!--Fimi & Ta Sats description-->
-                    <div class="card-sm-text fimi-text">
-                        <p>
-                            <b>Fimi & Ta Sats:</b>Its in collaboration with
-                            <mark>Velohouse </mark>contribute towards integration projects in Sweden. Our idea is to collaborate
-                            with new arrivals from different parts of the world into Swedish society by means of early-stage
-                            interventions and focusing on the individual. On Örestrand outside Höganäs we have done several
-                            projects for HVB home which leads to Personal Empowerment, Enhancing Personal & Professional
-                            knowledge and Networking including open house workshops, Swedish language learning and promoting
-                            Swedish handicrafts.</p>
-                        <p> Management Team-
-                            <strong>
-                                <mark>David J. Hare, Jesper Rydberg.</mark>
-                            </strong>
-                        </p>
-                        <p>Find us on:
-                            <a href="https://www.facebook.com/FIMI-Innovation-410836672674781/">Facebook:
-                                <img src="images/f.jpg" alt="logo image9" width="20" height="20">
-                            </a>
-                            <a href=" http://fimi.se/" style="color: black;">
-                                <abbr title="click here">Website</abbr>
-                            </a>
-                        </p>
+                    <div class="card m-0 p-o">
+                        <div class="card-header m-0 p-0">
+                            <h2 class="fimi-text">Fimi & Ta Sats</h2>
+                            <div class="card-sm-text fimi-content">
+                                <p>
+                                    <b>Fimi & Ta Sats:</b>Its in collaboration with
+                                    <mark>Velohouse </mark>contribute towards integration projects in Sweden. Our idea is to collaborate
+                                    with new arrivals from different parts of the world into Swedish society by means of
+                                    early-stage interventions and focusing on the individual. On Örestrand outside Höganäs
+                                    we have done several projects for HVB home which leads to Personal Empowerment, Enhancing
+                                    Personal & Professional knowledge and Networking including open house workshops, Swedish
+                                    language learning and promoting Swedish handicrafts.</p>
+                                <p> Management Team-
+                                    <strong>
+                                        <mark>David J. Hare, Jesper Rydberg.</mark>
+                                    </strong>
+                                </p>
+                                <p>Find us on:
+                                    <a href="https://www.facebook.com/FIMI-Innovation-410836672674781/">Facebook:
+                                        <img src="images/f.jpg" alt="logo image9" width="20" height="20">
+                                    </a>
+                                    <a href=" http://fimi.se/" style="color: black;">
+                                        <abbr title="click here">Website</abbr>
+                                    </a>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
