final modification and responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!--Heading of main content-->
             <div class="row">
                 <!--Velohouse description-->
-                <div class="col-sm-6 column clearfix">
+                <div class="col-sm-6 column ">
                     <div class="card m-0 p-o">
                         <div class="card-header m-0 p-0">
                             <h2 id="velotext">VeloHouse</h2>
@@ -133,20 +133,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 column5 clearfix">
+                <div class="col-sm-6 column5 ">
                     <!--Fimi & Ta Sats description-->
                     <div class="card m-0 p-o">
                         <div class="card-header m-0 p-0">
                             <h2 class="fimi-text">Fimi & Ta Sats</h2>
                             <div class="card-sm-text fimi-content">
                                 <p>
-                                    <b>Fimi & Ta Sats:</b>Its in collaboration with
-                                    <mark>Velohouse </mark>contribute towards integration projects in Sweden. Our idea is to collaborate
-                                    with new arrivals from different parts of the world into Swedish society by means of
-                                    early-stage interventions and focusing on the individual. On Örestrand outside Höganäs
-                                    we have done several projects for HVB home which leads to Personal Empowerment, Enhancing
-                                    Personal & Professional knowledge and Networking including open house workshops, Swedish
-                                    language learning and promoting Swedish handicrafts.</p>
+                                    <b>Fimi & Ta Sats:</b>Its in collaboration with<mark>Velohouse </mark>contribute towards integration projects in Sweden. Our idea is to collaborate with new arrivals from different parts of the world into Swedish society by means of early-stage interventions and focusing on the individual. On Örestrand outside Höganäs we have done several projects for HVB home which leads to Personal Empowerment, Enhancing Personal & Professional knowledge and Networking including open house workshops, Swedish language learning and promoting Swedish handicrafts.</p>
                                 <p> Management Team-
                                     <strong>
                                         <mark>David J. Hare, Jesper Rydberg.</mark>
