--- a/index.html
+++ b/index.html
@@ -6,19 +6,158 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>hyper-drive</title>
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+    <!--garima-->
+    <header>
+        <div id="top-links" class="text-right">
+            <a href="#">ABOUT US |</a>
+            <a href="#">BLOG |</a>
+            <a href="#">SIGN IN |</a>
+            <a href="#">HELP |</a>
+        </div>
+        <!--<ul class="nav navbar-nav navbar-right">
+                                <li><a href="#">
+                                        <i class="fa fa-facebook-f"></i>
+                                    </a></li>
+                                <li><a href="#">
+                                       <i class="fa fa-linkedin"></i>
+                                    </a></li>
+                                <li><a href="#">
+                                        <i class="fa fa-twitter"></i>
+                                    </a></li>
+                                <li><a href="#">
+                                       <i class="fa fa-youtube"></i>
+                                    </a></li>
+                            </ul>-->
+        <nav class="navbar navbar-default mian-nav" role="navigation">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                </button>
+                <figure>
+                    <img class="logo" src="logo.png" alt="HyperDrive">
+                </figure>
+            </div>
+            <div id="nav-main-links" class="collapse navbar-collapse navbar-ex1-collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="nav-li">
+                        <a href="#">
+                            <figure class="figure">
+                                <i class="fa fa-bicycle" style="font-size:36px;"></i>
+                                <figcaption class="figure-caption">
+                                    <h2>VeloHouse</h2>
+                                    <h6>Creative Lab &amp; House</h6>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li class="nav-li">
+                        <a href="#">
+                            <figure class="figure">
+                                <i class="fa fa-music" style="font-size:36px"></i>
+                                <figcaption class="figure-caption">
+                                    <h2>EMC</h2>
+                                    <h6>DJ workshop &amp; Festivals</h6>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li class="nav-li">
+                        <a href="#">
+                            <figure class="figure">
+                                <i class="fa fa-coffee" style="font-size:36px"></i>
+                                <figcaption class="figure-caption">
+                                    <h2>Hyperspace Café</h2>
+                                    <h6>Live Stream Music</h6>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li class="nav-li">
+                        <a href="#">
+                            <figure class="figure">
+                                <i class="fa fa-chain" style="font-size:36px"></i>
+                                <figcaption class="figure-caption">
+                                    <h2>Fimi Tasats</h2>
+                                    <h6>Integration</h6>
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!--Carousel-->
+    <div id="Carousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#Carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#Carousel" data-slide-to="1"></li>
+            <li data-target="#Carousel" data-slide-to="2"></li>
+            <li data-target="#Carousel" data-slide-to="3"></li>
+            <li data-target="#Carousel" data-slide-to="4"></li>
+        </ol>
+
+        <!-- Pictures for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="images/velo_2.jpeg" alt="">
+                <div class="carousel-caption">
+                    <h2>Invest In Learning</h2>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/fimi_1.jpeg" alt="">
+                <div class="carousel-caption">
+                    <h2>Trust leads to approachability</h2>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/EMC_4.jpeg" alt="">
+                <div class="carousel-caption">
+                    <h2>Music is Medicine</h2>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/fimi_4.jpeg" alt="">
+                <div class="carousel-caption">
+                    <h2>Empower People</h2>
+                </div>
+            </div>
+            <div class="item">
+                <img src="images/velo_3.jpg" alt="">
+                <div class="carousel-caption">
+                    <h2>Unity is Strength</h2>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#Carousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#Carousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    </header>
+    <!--shweta-->
     <main>
         <div class="container">
-            <h1>About Our Organization</h1>
-            <!--Heading of main content-->
-            <div class="row">
+            <div class="row velo-row">
                 <!--Velohouse description-->
                 <div class="col-sm-6 column ">
                     <div class="card m-0 p-o">
@@ -140,7 +279,13 @@
                             <h2 class="fimi-text">Fimi & Ta Sats</h2>
                             <div class="card-sm-text fimi-content">
                                 <p>
-                                    <b>Fimi & Ta Sats:</b>Its in collaboration with<mark>Velohouse </mark>contribute towards integration projects in Sweden. Our idea is to collaborate with new arrivals from different parts of the world into Swedish society by means of early-stage interventions and focusing on the individual. On Örestrand outside Höganäs we have done several projects for HVB home which leads to Personal Empowerment, Enhancing Personal & Professional knowledge and Networking including open house workshops, Swedish language learning and promoting Swedish handicrafts.</p>
+                                    <b>Fimi & Ta Sats:</b>Its in collaboration with
+                                    <mark>Velohouse </mark>contribute towards integration projects in Sweden. Our idea is to collaborate
+                                    with new arrivals from different parts of the world into Swedish society by means of
+                                    early-stage interventions and focusing on the individual. On Örestrand outside Höganäs
+                                    we have done several projects for HVB home which leads to Personal Empowerment, Enhancing
+                                    Personal & Professional knowledge and Networking including open house workshops, Swedish
+                                    language learning and promoting Swedish handicrafts.</p>
                                 <p> Management Team-
                                     <strong>
                                         <mark>David J. Hare, Jesper Rydberg.</mark>
@@ -160,10 +305,52 @@
                 </div>
             </div>
         </div>
+        <!--Pratibha-->
+        <section id="news-letter">
+            <div>
+                <h1>JOIN THE COMMUNITY</h1>
+                <SPAn>Stay up-to-date with our upcoming events and promotions</SPAn>
+            </div>
+            <hr class="news-letter">
+            <div class="row vdivide">
+                <div class="col-sm-6 text-right">
+                    <input type="text" value="Enter email address">
+                </div>
+                <div class="col-sm-3 text-left">
+                    <button type="button" class="btn btn-large btn-block btn-default">SIGN ME UP!</button>
+                </div>
+            </div>
+            <hr class="news-letter">
+        </section>
+        <footer id="footer">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <i class="fa fa-twitter-square" style="font-size:48px"></i>
+                    <i class="fa fa-facebook-square" style="font-size:48px"></i>
+                    <i class="fa fa-google-plus-square" style="font-size:48px"></i>
+                    <i class="fa fa-youtube-square" style="font-size:48px"></i>
+
+                </div>
+                <nav class="nav">
+                    <ul>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">HOME</a>
+                            <a class="nav-link active" href="#">ABOUT US</a>
+                            <a class="nav-link active" href="#">BLOG</a>
+                            <a class="nav-link active" href="#">VELOHOUSE</a>
+                            <a class="nav-link active" href="#">EMC</a>
+                            <a class="nav-link active" href="#">WORKSHOPS</a>
+
+                    </ul>
+                </nav>
+                <div class="panel-footer">
+                    <h5>Thankyou for visiting. HyperDrive &copy; 2018</h5>
+                </div>
+            </div>
+        </footer>
     </main>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
     <script src="js/app.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 
 </html>
