jquery added and hover effects

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                             <h2 id="velotext">VeloHouse</h2>
                             <div class="card-sm-body velo">
                                 <img src="images/image8.jpg" alt="velo-house-images" class="image-size img-responsive">
+                                <div class="overlay">Vintage Bicycle Passion.<a href="https://vimeo.com/105867814"><abbr title="Click Here!"><i class="fas fa-bicycle"></abbr></i></a></div>
                             </div>
                         </div>
                     </div>
@@ -191,6 +192,7 @@
                                 <abbr title="click here">Website</abbr>
                             </a>
                         </p>
+                        <div><img src="hover-velo.jpg" alt="velohouse" id="velo1"></div>
                     </div>
                 </div>
             </div>
