--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div id="nav-main-links" class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-li">
-                        <a href="#">
+                        <a href="#velotext" data-toggle="tooltip" data-placement="bottom" title="Welcome to Velohouse">
                             <figure class="figure">
                                 <i class="fa fa-bicycle" style="font-size:36px;"></i>
                                 <figcaption class="figure-caption">
@@ -61,7 +61,7 @@
                         </a>
                     </li>
                     <li class="nav-li">
-                        <a href="#">
+                        <a href="#EMCtext" data-toggle="tooltip" data-placement="bottom" title="Welcome to EMC">
                             <figure class="figure">
                                 <i class="fa fa-music" style="font-size:36px"></i>
                                 <figcaption class="figure-caption">
@@ -72,7 +72,7 @@
                         </a>
                     </li>
                     <li class="nav-li">
-                        <a href="#">
+                        <a href="#EMCtext" data-toggle="tooltip" data-placement="bottom" title="Welcome to hyperspacecafe">
                             <figure class="figure">
                                 <i class="fa fa-coffee" style="font-size:36px"></i>
                                 <figcaption class="figure-caption">
@@ -83,7 +83,7 @@
                         </a>
                     </li>
                     <li class="nav-li">
-                        <a href="#">
+                        <a href="#tasatstext" data-toggle="tooltip" data-placement="bottom" title="Welcome to FIMI TASATS">
                             <figure class="figure">
                                 <i class="fa fa-chain" style="font-size:36px"></i>
                                 <figcaption class="figure-caption">
@@ -192,7 +192,9 @@
                                 <abbr title="click here">Website</abbr>
                             </a>
                         </p>
-                        <div><img src="hover-velo.jpg" alt="velohouse" id="velo1"></div>
+                        <div>
+                            <img src="hover-velo.jpg" alt="velohouse" id="velo1">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -259,7 +261,7 @@
                 <div class="col-sm-6 column4">
                     <div class="card m-0 p-o">
                         <div class="card-header m-0 p-0">
-                            <h2 class="ta-sats-text">Ta Sats:IDEEL Forening</h2>
+                            <h2 class="ta-sats-text">TaSats:IDEELForening</h2>
                             <div class="card-sm-text">
                                 <p>
                                     <b>Ta Sats:</b> Club är till för alla ungdomar i regionen under 25 år. Syftet är att hjälpa
