--- a/index.html
+++ b/index.html
@@ -113,31 +113,31 @@
             <div class="item active">
                 <img src="images/velo_2.jpeg" alt="">
                 <div class="carousel-caption">
-                    <h2>Invest In Learning</h2>
+                    Invest In Learning
                 </div>
             </div>
             <div class="item">
                 <img src="images/fimi_1.jpeg" alt="">
                 <div class="carousel-caption">
-                    <h2>Trust leads to approachability</h2>
+                Trust leads to approachability
                 </div>
             </div>
             <div class="item">
                 <img src="images/EMC_4.jpeg" alt="">
                 <div class="carousel-caption">
-                    <h2>Music is Medicine</h2>
+                Music is Medicine
                 </div>
             </div>
             <div class="item">
                 <img src="images/fimi_4.jpeg" alt="">
                 <div class="carousel-caption">
-                    <h2>Empower People</h2>
+                    Empower People
                 </div>
             </div>
             <div class="item">
                 <img src="images/velo_3.jpg" alt="">
                 <div class="carousel-caption">
-                    <h2>Unity is Strength</h2>
+                    Unity is Strength
                 </div>
             </div>
 
